# dendrite

./: .gitignore  meson.build
data/: blob.spln  spiral.spln  whale.spln
src/: drawingarea.cpp  drawingarea.h  main.cpp  mainwindow.cpp  mainwindow.h
src/controller/: controlpoint.cpp  controlpoint.h  node.cpp  node.h  path.cpp  path.h  selection.cpp  selection.h  sketch.cpp  sketch.h  undo.cpp  undo.h
src/model/: controlpoint.h  document.cpp  document.h  node.h  path.h  reference.cpp  reference.h  sketch.cpp  sketch.h  type.h
src/serialisation/: endpoint.h  layout.cpp  layout.h  reader.cpp  reader.h  types.h  writer.cpp  writer.h
src/utilities/: colour.h  geometry.cpp  geometry.h  id.h
src/view/: context.h  sketch.cpp  sketch.h
